--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
 /* =====================
    VARIÁVEIS DE CORES
@@ -20,7 +21,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 body, html {
@@ -45,7 +46,7 @@ section#login {
   background-color: white;
   overflow: hidden;
   width: 250px;
-  height: 530px;
+  height: 550px;
   border-radius: 20px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.48);
   transition: width .3s, height .3s;
