--- a/assets/css/pedidos.css
+++ b/assets/css/pedidos.css
@@ -274,6 +274,9 @@ h1 {
   background-color: #c9302c;
 }
 
+/* =============================================
+  RESPONSIVIDADE
+============================================= */
 @media (max-width: 1000px) {
   .logo {
     max-width: 20%;
@@ -326,6 +329,11 @@ h1 {
 
   .carrinho-botoes {
     flex-direction: column;
+  }
+  
+  h1 {
+    margin-top: 16px;
+    font-size: 1.7em;
   }
 }
 
