--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -8,6 +8,7 @@
   --cor1: #83c716;       /* Verde limão suave */
   --cor2: #3A6351;       /* Verde escuro */
   --cor3: #A8C686;       /* Verde claro */
+  --marrom-terra: #7B5E42;
   --cor-sucesso: #59880f;
   --cor-sucesso-hover: #6ba50ea9;
   --cor-erro: #8B2E2E;
@@ -69,9 +70,43 @@ div#formulario {
   padding: 10px;
 }
 
-div#formulario h1 {
-  text-align: center;
-  margin-bottom: 10px;
+#alinhamento {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 60px;
+}
+
+nav {
+  margin-right: auto;
+}
+
+nav li {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+nav li a {
+  color: whitesmoke;
+  background-color: var(--cor2);
+  text-decoration: none;
+  font-size: 30px;
+  padding: 5px 5px 0px 5px;
+  border-radius: 30%;
+  transition: background 0.8s ease, padding 0.3s ease, transform 0.2s ease;
+}
+
+nav li a:hover,
+nav li a:focus {
+  padding: 7px 8px 0px 8px;
+  background-color: var(--marrom-terra);
+  transform: scale(1.1);
+}
+
+#alinhamento h1 {
+  margin: 0 auto;
+  transform: translateX(-50%);
 }
 
 div#formulario p {
