--- a/assets/css/produtos.css
+++ b/assets/css/produtos.css
@@ -165,6 +165,7 @@ header {
 #input-pesquisa, #filtro-categoria {
   width: 100%;
   border: none;
+  padding: 0px 10px;
   outline: none;
   font-size: 1rem;
   background: transparent;
@@ -178,7 +179,7 @@ header {
 .produtos-grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-  gap: 2rem;
+  gap: .7rem;
 }
 
 /* --- CARD DE PRODUTO (Seu CSS já era ótimo, apenas pequenos ajustes) --- */
