--- a/assets/css/vendedor.css
+++ b/assets/css/vendedor.css
@@ -18,7 +18,8 @@ body {
     flex-direction: column;
     align-items: center;
     gap: 1rem;
-    border-radius: 0px 0px 10px 10px;
+    border-bottom-left-radius: 16px;
+    border-bottom-right-radius: 16px;
 }
 
 .vendedor-foto {
