--- a/assets/css/carrinho.css
+++ b/assets/css/carrinho.css
@@ -2,7 +2,25 @@
 /* ============================
   CARRINHO DE COMPRAS
 ============================ */
+.carrinho-icone {
+  position: relative;
+  color: var(--branco-neve);
+  cursor: pointer;
+  font-size: 1.5rem;
+  height: 30px;
+}
 
+#contador-carrinho {
+  position: absolute;
+  top: -6px;
+  right: -10px;
+  background-color: var(--marrom-terra);
+  color: var(--branco-neve);
+  font-size: 0.75rem;
+  font-weight: 700;
+  padding: 2px 6px;
+  border-radius: 50%;
+}
 /* --- Ícone Principal --- */
 #icone-carrinho {
     display: none; /* Começa escondido, JS controla a visibilidade */
@@ -27,6 +45,7 @@
   font-size: 1rem;
   box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15);
   z-index: 1000;
+  touch-action: manipulation;
 }
 
 .carrinho-dropdown.show {
@@ -39,6 +58,7 @@
   max-height: 300px;
   overflow-y: auto;
   padding-right: 5px; /* Espaço para a barra de rolagem */
+  scroll-behavior: smooth;
 }
 
 .item-carrinho {
@@ -136,4 +156,36 @@
 }
 .btn-remover:hover {
   background-color: #c0392b;
+}
+
+@media (max-width: 768px) {
+  .carrinho-dropdown {
+    display: none !important;
+  }
+}
+
+/* --- Resumo do Carrinho --- */
+.carrinho-resumo {
+  text-align: center;
+  margin-bottom: 10px;
+  font-size: 0.95rem;
+  color: var(--cinza-pedra);
+}
+
+.btn-ver-carrinho {
+  display: block !important;
+  width: 100%;
+  padding: 12px !important;
+  background: var(--verde-folha);
+  color: var(--branco-neve);
+  text-align: center;
+  font-weight: bold;
+  font-size:16px !important;
+  border-radius: 6px !important;
+  text-decoration: none;
+  transition: background 0.3s;
+}
+
+.btn-ver-carrinho:hover {
+  background: var(--marrom-terra) !important;
 }
