--- a/assets/css/detalhes-produto.css
+++ b/assets/css/detalhes-produto.css
@@ -228,20 +228,22 @@ body {
   CARRINHO DE COMPRAS
 ================================== */
 .carrinho-icone {
-  position: absolute;
+  position: absolute !important;
   top: 2rem;
   right: 2rem;
   cursor: pointer;
   z-index: 10;
-}
-
-#carrinho {
   width: 35px;
   height: 35px;
   background-color: var(--verde-folha);
-  border: 2px solid var(--verde-folha);
+  border: 2px solid var(--verde-claro);
   padding: 8px;
   border-radius: 30%;
+  padding-left: 11px;
+}
+
+.btn-ver-carrinho {
+      width: 93% !important;
 }
 
 #contador-carrinho {
